<resources>
    <string name="app_name">Politics247</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>

    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="Nationality">Nationality</string>
    <string name="DateOfBirth">Date of birth</string>
    <string name="politicalpreference">Political preference</string>
    <string name="Town">Town</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="email_address">E-mail address</string>
    <string name="CreateNewPost">Create new Post</string>
    <string name="Title">Title</string>
    <string name="Text">Text</string>
    <string name="CreatePost">Create Post</string>
    <string name="ContentCreated">Content Created</string>
    <string name="Dislike">dislike</string>
    <string name="Like">Like</string>
    <string name="ChangePassword">Change Password</string>
    <string name="OldPassword">Old Password</string>
    <string name="newPassword">New Password</string>

    <string-array name="user_type_array">
        <item>Normal user</item>
        <item>Media user</item>
        <item>Political user</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="nav_drawer_fragment_content_detail">Content Detail</string>
    <string name="nav_drawer_fragment_add_comment">Add Comment</string>
    <string name="nav_drawer_fragment_login">Login</string>
    <string name="nav_drawer_fragment_register">Register</string>
    <string name="nav_drawer_fragment_change_password">Change Password</string>
    <string name="nav_drawer_fragment_user_list">User List</string>
    <string name="nav_drawer_fragment_own_profile">Profile Edit Screen</string>
    <string name="nav_drawer_fragment_profile">Profile</string>

    <string name="Subscribe">Subscribe</string>
    <string name="Comment">Comment</string>
    <string name="nav_drawer_fragment_create_content">Create Content</string>
    <string name="nav_drawer_fragment_home">Home</string>
    <string name="FirstName">First name</string>
    <string name="LastNamePrefix">Last name prefix</string>
    <string name="LastName">Last name</string>


</resources>
