<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rainer.mit2client.ProfileFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/user"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/FirstName"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_lastnameprefix"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/LastNamePrefix"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/LastName"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_nationality"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Nationality"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/DateOfBirth"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_political_pref"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/politicalpreference"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/profile_edit_town"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Town"
                        android:maxLength="150"
                        android:singleLine="false"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/Gender"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/profile_edit_gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"/>

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_edit_submit_edit_profile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_cab_done_mtrl_alpha"/>

</android.support.design.widget.CoordinatorLayout>


