<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rainer.mit2client.LoginScreen"
    tools:showIn="@layout/activity_login_screen">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:orientation="vertical"
            android:padding="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/Register_Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Register"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/Login_Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Login"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
